# CynthAI_v2

./: .gitignore  ARCHITECTURE.md  BELIEF_STATE.md  FIELD.md  POKEMON_VECTOR.md  PROTOCOL.md  README.md  TERA_implementation.md  TODO.md  TODO2.md  _debug_block.py  _debug_catch_first_invalid.py  _debug_env15.py  _debug_env15_v2.py  _debug_rollout_test.py  _extract_pyc.py  live_viz.py  memo_rust.md  requirements.txt  run_cheater.py  run_cheater_indep_critic.py  run_cheater_v10.py  run_cheater_v11.py  run_cheater_v12.py  run_cheater_v5.py  run_cheater_v6.py  run_cheater_v7.py  run_cheater_v8.py  run_cheater_v9.py  run_curriculum_max.py  run_fo_overfit.py  run_fo_overfit_2l_nodetach.py  run_fo_overfit_mlp.py  run_fo_overfit_mlp_nodetach.py  self_play.py  test_attention_maps.py  test_encoder.py  test_full_pipeline.py
checkpoints/: metrics.csv
data/: build_dicts.py  generate_team_pool.js  move_stats.json  rollout.py  rust_ids_all.txt  team_pool.json  team_pool.py
debug/: _debug_battle_test.py  _debug_block.py  _debug_catch_first_invalid.py  _debug_catch_switch_fail.py  _debug_env15.py  _debug_env15_v2.py  _debug_full.py  _debug_gpu.py  _debug_positions.py  _debug_rollout_test.py  _debug_run.py  _debug_single.py  _debug_tera.py  _scan_stellar.py  diagnose_nan_cross_attn.py  diagnose_nan_forward.py  test_tera.py
diag/: _debug_aberrant.py  _debug_winner.py  diag_cosine.py  diag_value.py  diagnose_collapse.py  diagnostic.py  make_token_cache.py  offline_critic_fit.json  probing.py  (+4 more)
simulator/: Cargo.toml  __init__.py
simulator/python/: __init__.py
simulator/src/: lib.rs
(+90 files in other folders)
