[package]
name = "cynthai-simulator"
version = "0.1.0"
edition = "2021"

[lib]
name = "simulator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
pokemon-showdown = { path = "../../pokemon-showdown-rs" }
serde_json = "1"
